# asr_distillation

./: Design.md  IFLOW.md  README.md  config.yaml  main.py  main_simple.py  main_stream.py  pyproject.toml  requirements.txt  test_oss_storage.py
audio_process/: base.py  config.yaml  main.py  main_batch.py
audio_process/stages/: audio_format.py  download.py  segment_split.py  segment_upload.py  vad.py
audio_process/tools/: checkpoint.py  data_loader.py  data_structures.py  meta_writer.py  pipeline.py  storage.py
data_process/: ARCHI.md  README.md  audio_stage_process.py  audio_stage_processors.py  run_pipeline.py  simple_ray_pipeline.py  test_pipeline.py
examples/model_examples/: qwen3_omni.py
examples/tool_examples/: vad.py
scripts/: run.sh
src/: __init__.py  common.py  simple_pipeline.py  simple_producer.py  simple_writer.py
src/compute/: __init__.py  audio_processor.py  inference.py  segment_processor.py  vad.py  vad_stage.py
src/config/: manager.py
src/data/: __init__.py  audio_indexer.py  media_indexer.py  storage.py
src/monitoring/: __init__.py  system.py
src/scheduling/: __init__.py  pipeline.py  stream_pipeline.py
src/storage/: __init__.py  optimized_result_writer.py  result_writer.py
tests/: README.md  __init__.py  conftest.py  run_tests.py
tests/compute/: test_audio_processor.py  test_batch_inference.py  test_batch_media_processor.py  test_media_detector.py  test_media_extractor.py  test_vad.py
tests/config/: test_manager.py
tests/data/: test_audio_indexer.py
tests/scheduling/: __init__.py  test_pipeline.py  test_ray_init.py  (+1 more)
(+4 files in other folders)
