[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "asr-distillation"
version = "0.1.0"
description = "ASR Distillation Framework with Large Multimodal Models"
authors = [
    {name = "ASR Team", email = "team@example.com"}
]
requires-python = ">=3.9"
dependencies = [
    "torch>=2.1.0",
    "torchaudio>=2.1.0", 
    "ray[data,train,serve]>=2.8.0",
    "vllm>=0.4.0",
    "transformers>=4.36.0",
    "datasets>=2.15.0",
    "webdataset>=0.2.0",
    "pyarrow>=14.0.0",
    "oss2>=2.18.0",
    "prometheus-client>=0.19.0",
    "psutil>=5.9.0",
    "numpy>=1.24.0",
    "pandas>=2.1.0",
    "pydantic>=2.5.0",
    "typer>=0.9.0",
    "loguru>=0.7.0",
    "omegaconf>=2.3.0",
    "ffmpeg-python>=0.2.0"
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.7.0"
]

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true